updated index.html file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
     <p>
       your trusted farming portal.we provide farmers with the latest information on crop cultivation.  
     </p>
-    <div>
+     <audio controls>
+        <source src="C:\Users\s.poojitha\Desktop\wt_lab\farm-rooster-63323.mp3" type="audio/mpeg">
+    </audio><br><br>
+    <video width="320" height="240" controls>
+        <source src="C:\Users\s.poojitha\Desktop\wt_lab\farmvc.mp4" type="video/mp4">
+    </video><br><br>
+    <button onclick="alert('welcome to smart kisan')">click me</button><br><br>
     <label>enter your name</label>
     <input type="text" placeholder="enter your full name"><br><br>
     <label>enter the soil type</label>
@@ -52,7 +58,10 @@
     <option value="black soil">black soil</option>
     <option value="red soil">red soil</option>
     <option value="alluvial soil">alluvial</option><br>
-    </div>
+    <option value="laterite soil">laterite soil</option>
+    <option value="desert soil">desert soil</option>        
+    </select><br><br>
+    <button onclick="alert('thank you for visiting smart kisan')">exit</button>
 </body>
 </html>
 
